--- a/Ressources/test_compa.css
+++ b/Ressources/test_compa.css
@@ -3,7 +3,9 @@ body {
     font-family: Helvetica, sans-serif;
     font-size: 22px;
     color: black;
+    /*background-color: hsla(103, 71%, 26%, 0.918);*/
     background-image: url("./Images/palm-leaf_pattern.webp");
+    /*background-size: cover;*/
     text-align: center;
 }
 
@@ -62,6 +64,7 @@ nav span {
 }
 
 /* Accueil */
+
 #accueil {
     height: 700px;
     padding-top: 75px;
@@ -78,7 +81,10 @@ nav span {
     color: seashell;
 }
 
+
+
 /* Accueil - Mission */
+
 #mission {
     width: 1000px;
     margin: auto;
@@ -86,7 +92,6 @@ nav span {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    flex-wrap: wrap;
 }
 
 .mission-content {
@@ -106,8 +111,7 @@ nav span {
 
 #mission img {
     height: 300px;
-    width: 100%;
-    max-width: 400px;
+    width: 400px;
     object-fit: cover;
 }
 
@@ -131,6 +135,7 @@ nav span {
 }
 
 /* Accueil - Aperçu Menu */
+
 #menu {
     min-width: 750px;
     margin: auto;
@@ -139,7 +144,6 @@ nav span {
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-wrap: wrap;
 }
 
 .menu-content h1 {
@@ -169,9 +173,10 @@ nav span {
 }
 
 #menu ul li::before {
-    content: "☕";
-    margin-right: 10px;
+    content: "☕"; /* Utiliser l'emoji désiré */
+    margin-right: 10px; /* Espacement entre l'emoji et le texte */
 }
+
 
 .menu-button {
     width: 200px;
@@ -195,10 +200,10 @@ nav span {
 }
 
 /* Footer */
+
 #footer {
     background-color: hsla(102, 72%, 14%, 1);
     display: flex;
-    flex-wrap: wrap;
     min-height: 400px;
     margin: auto;
     justify-content: space-around;
@@ -213,7 +218,6 @@ nav span {
     width: 400px;
     border-radius: 25px;
     align-content: center;
-    margin-bottom: 20px;
 }
 
 .footer-content h3 {
@@ -223,8 +227,7 @@ nav span {
 
 #footer img{
     height: 300px;
-    width: 100%;
-    max-width: 400px;
+    width: 400px;
     border-radius: 25px;
 }
 
@@ -247,129 +250,118 @@ nav span {
     padding: 5px 0;
 }
 
-/* Media Queries for Responsiveness */
-@media (max-width: 1024px) {
-    .mission-content h1, .menu-content h1 {
-        font-size: 80px;
+
+@media (max-width: 768px) {
+
+    body {
+        font-size: 18px;
     }
-    .mission-content p, .menu-content p {
+
+    header {
+        height: auto;
+        padding: 10px 0;
+    }
+
+    header img {
+        height: 40px;
+        width: 80px;
+        padding-left: 0;
+    }
+
+    nav {
+        margin-left: 0;
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+    }
+
+    nav .nav-button {
+        width: 80px;
+        height: 35px;
+        margin-right: 0;
+        font-size: 0.9em;
+    }
+
+    nav span {
+        padding: 10px 5px;
+    }
+
+    #accueil {
+        height: 500px;
+        padding-top: 50px;
+        background-size: cover;
+    }
+
+    #accueil .content {
+        font-size: 50px;
+    }
+
+    #mission {
+        width: 90%;
+        flex-direction: column;
+        padding-top: 50px;
+    }
+
+    #mission img {
+        width: 100%;
+        height: auto;
+        margin-bottom: 20px;
+    }
+
+    .mission-content h1 {
+        font-size: 50px;
+    }
+
+    .mission-content p {
         font-size: 1em;
     }
+
+    .mission-button {
+        width: 100%;
+        height: 50px;
+        font-size: 1em;
+    }
+
     #menu {
         min-width: 100%;
         flex-direction: column;
     }
-}
 
-@media (max-width: 768px) {
-    #accueil .content {
+    .menu-content h1 {
         font-size: 50px;
     }
-    .mission-content h1, .menu-content h1 {
-        font-size: 60px;
-    }
-    .mission-content p, .menu-content p {
-        font-size: 0.9em;
-    }
-    #menu {
-        flex-direction: column;
-        align-items: center;
-    }
-    #mission {
-        flex-direction: column;
-        align-items: center;
-    }
-    #footer {
-        flex-direction: column;
-        align-items: center;
-    }
-    #footer .footer-content, #footer img {
-        width: 100%;
-        max-width: none;
-    }
-}
 
-@media (max-width: 480px) {
-    nav .nav-button {
-        width: 80px;
-        font-size: 14px;
+    .menu-content p {
+        font-size: 1.2em;
     }
-    .mission-button, .menu-button {
-        width: 150px;
+
+    #menu ul {
+        margin: 0;
+    }
+
+    .menu-button {
+        width: 100%;
         height: 50px;
         font-size: 1em;
     }
-    #accueil .content {
-        font-size: 40px;
-    }
-    .mission-content h1, .menu-content h1 {
-        font-size: 40px;
-    }
-    .mission-content p, .menu-content p {
-        font-size: 0.8em;
-    }
-    #mission img {
-        height: 200px;
-        width: 300px;
-    }
-    #footer img {
-        height: 200px;
-    }
-}
 
-/* Limiter la largeur des sections */
-#accueil, #mission, #menu, #footer {
-    max-width: 90%;
-    margin: 0 auto;
-}
-
-#accueil .content {
-    margin: auto;
-    text-align: center;
-}
-
-#mission, #menu {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.mission-content, .menu-content {
-    text-align: center;
-    max-width: 800px;
-    width: 100%;
-}
-
-#menu ul {
-    padding: 0;
-    margin: 20px auto;
-    list-style: none;
-}
-
-#footer {
-    flex-direction: column;
-    align-items: center;
-}
-
-/* Ajustement du bouton dans la section mission */
-.mission-button, .menu-button {
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-/* Media Queries pour améliorer la réactivité */
-@media (max-width: 768px) {
-    header, nav, .mission-content, .menu-content, #footer {
-        width: 100%;
-    }
-
-    #menu {
+    #footer {
         flex-direction: column;
+        align-items: center;
+        padding: 20px 0;
     }
 
     #footer .footer-content {
-        width: 90%;
+        width: 80%;
         margin-bottom: 20px;
     }
-}
 
+    #footer img {
+        width: 80%;
+        height: auto;
+    }
+
+    .copyright {
+        font-size: 0.8em;
+    }
+}
